[Checkpoint] rename url heirarchey...
sign up => membership
sign in/out => session
inactivate => ???

--- a/public/406-unsupported-browser.html
+++ b/public/406-unsupported-browser.html
@@ -55,7 +55,7 @@
 </head>
 
 <body class="rails-default-error-page">
-  <!-- This file lives in public/406-unsupported-browser.html -->
+  <!-- This file lives sign_in public/406-unsupported-browser.html -->
   <div class="dialog">
     <div>
       <h1>Your browser is not supported.</h1>
